# rust-gif-maker

./: Cargo.toml  README.md
src/: filter.rs  frame.rs  input.rs  main.rs  project.rs
