[package]
name = "rust-gif-maker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prettytable-rs = "0.10.0"
question = "0.2.2"
serde = { version = "1.0.166", features = ["derive"] }
serde_json = "1.0.100"
opencv = "0.82.1"
unwrap-infallible = "0.1.5"
strum = "0.25.0"
strum_macros = "0.25.1"
